help fragment en burgmenu fragment
bugg waardoor de views overlappen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCZe5sF3fvqAa1Vphs6yP-WZJ2sQ-iTMhs</string>
     <string name="app_name">Navi-gator</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_fragment_help">Help</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
