--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Navi-gator</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_fragment_help">Help</string>
+    <string name="button_start">Start</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
