--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_fragment_help">Help</string>
     <string name="button_start">Start</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings">Settings</string>
+    <string name="waypoints_btn">Waypoints</string>
+    <string name="route_btn">Route</string>
 </resources>
