--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="settings">Settings</string>
     <string name="waypoints_btn">Waypoints</string>
     <string name="route_btn">Route</string>
+    <string name="animiated_text">Navi-Gator</string>
 </resources>
