--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="waypoint_title">Title</string>
     <string name="waypoint_details">Details</string>
     <string name="waypoint_image">Image</string>
+    <string name="setting_btn_explain">Go here if you want to change the language</string>
+    <string name="loading_explain">There is a process running in the background</string>
 </resources>
