--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,18 @@
 <resources>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCZe5sF3fvqAa1Vphs6yP-WZJ2sQ-iTMhs</string>
-    <string name="app_name">Navi-gator</string>
+    <string name="app_name" translatable="false">Navi-Gator</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_fragment_help">Help</string>
     <string name="button_start">Start</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="settings">Settings</string>
     <string name="waypoints_btn">Waypoints</string>
     <string name="route_btn">Route</string>
-    <string name="animiated_text">Navi-Gator</string>
+    <string name="animiated_text" translatable="false">Navi-Gator</string>
     <string name="waypoint_title">Title</string>
     <string name="waypoint_details">Details</string>
     <string name="waypoint_image">Image</string>
     <string name="setting_btn_explain">Go here if you want to change the language</string>
     <string name="loading_explain">There is a process running in the background</string>
+    <string name="language">Language</string>
 </resources>
