--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -12,4 +12,5 @@
     <string name="waypoint_image">Afbeelding</string>
     <string name="waypoint_title">Titel</string>
     <string name="waypoints_btn">Waypoints</string>
+    <string name="title_fragment_setting">Instellingen</string>
 </resources>
