--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="button_start">Start</string>
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="settings">Settings</string>
-    <string name="waypoints_btn">Waypoints</string>
+    <string name="waypoints">Waypoints</string>
     <string name="route_btn">Route</string>
     <string name="animiated_text" translatable="false">Navi-Gator</string>
     <string name="waypoint_title">Title</string>
@@ -16,4 +16,5 @@
     <string name="setting_btn_explain">Go here if you want to change the language</string>
     <string name="loading_explain">There is a process running in the background</string>
     <string name="language">Language</string>
+    <string name="nodetails">No Details</string>
 </resources>
